2006-10-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam.3.xml: Add pam_get_user function.

	* modules/pam_motd/pam_motd.8.xml: Fix typo.

2006-10-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_namespace/pam_namespace.c: Reserve space for
	trailing zero.

2006-10-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/support.c (_unix_verify_password): Try system
	crypt() if we don't know the hash alogorithm.
	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Likewise.

2006-10-13  Tomas Mraz <t8m@centrum.cz>

	* doc/mwg/Linux-PAM_MWG.xml: Add id[s] to section[s].
	* doc/sag/pam_access.xml: Likewise.
	* doc/sag/pam_echo.xml: Likewise.
	* doc/sag/pam_env.xml: Likewise.
	* doc/sag/pam_exec.xml: Likewise.
	* doc/sag/pam_group.xml: Likewise.
	* doc/sag/pam_limits.xml: Likewise.
	* doc/sag/pam_namespace.xml: Likewise.
	* doc/sag/pam_time.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Add id to book.
	* doc/adg/Linux-PAM_ADG.xml: Add id to book.
	* doc/mwg/Linux-PAM_MWG.xml: Add id to book.


2006-10-07  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/hu.po: Updated hungarian translation (from
	Kalman Kemenczy <kkemenczy@novell.com>)

2006-09-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/adg/Makefile.am: Add manual pages as dependency.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_unix.xml.
	* doc/sag/pam_unix.xml: New.
	* modules/pam_unix/Makefile.am: Generate pam_unix.8 manual page.
	* modules/pam_unix/README.xml: New.
	* modules/pam_unix/pam_unix.8.xml: New.
	* modules/pam_unix/README: Regenerate from XML.
	* modules/pam_unix/pam_unix.8: Generated from XML.

2006-09-09  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_wheel/pam_wheel.8.xml: Fix typo.
	* modules/pam_wheel/pam_wheel.8: Likewise.
	* modules/pam_wheel/README: Likewise.

2006-09-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/de.po: Fix typo.

2006-09-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.3
